# fastapi_learn_1

./: crud.py  db.sqlite3  item_views.py  main.py  pyproject.toml
alembic/versions/: 2025_02_09_2249-8db075af4c21_create_products_table.py  2025_02_10_0104-539263f2ce89_create_users_table.py  2025_02_10_0121-c7885b9a5961_create_posts_table.py  2025_02_10_2308-eaf3ecd39397_create_profile_table.py  2025_02_16_1745-d81d81465264_create_orders_table.py  2025_02_16_1855-7b6441f871e2_create_order_product_association.py
api_v1/products/: crud.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
