[tool.poetry]
name = "fastapi-learn-1"
version = "0.1.0"
description = ""
authors = ["Mikhail Denisov <denisovmvtmb@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standart"], version = "^0.115.8"}
uvicorn = {extras = ["standart"], version = "^0.34.0"}
pydantic = {extras = ["email"], version = "^2.10.6"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
aiosqlite = "^0.21.0"
pydantic-settings = "^2.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
